<resources>
    <string name="app_name">Tuto Concept Android</string>
    <string name="action_settings">Settings</string>
    <string name="new_app">This is my new Application!</string>

    <string name="ceci_activity">Ceci \n est une \n Activity</string>
    <string name="timer_value">05:00</string>

    <string name="ceci_texte1">et ceci est</string>
    <string name="ceci_texte2"> \n du texte !</string>

    <string name="ceci_button">Ceci est \n un button !</string>

    <string name="text_actionbar1">Ceci est une ActionBar.\n\n</string>
    <string name="text_actionbar2"> Une ActionBar est une option  de la fenêtre qui indique la location de l\'utilisateur et qui permet à celui-ci d\'effectuer des actions et de naviguer. </string>
    <string name="text_actionbar3">Pour continuer, \nappuyez sur le button en haut à droite ;)</string>
    <string name="text_choix">Choisissez un standard Android.</string>

    <string name="toast_item">Toast</string>
    <string name="intent_item">Intent</string>
    <string name="recycler_item">Recycler View</string>
    <string name="download_item">Téléchargement</string>

    <string name="text_toast1">Un Toast est un des 6 standards Android</string>

    <string name="toast_button">Afficher un Toast</string>
    <string name="toast_affiche">Voici un Toast</string>


    <string name="text_intent1">Un INTENT permet d\'ouvrir une Activity sur une aute application</string>
    <string name="intent_exemple">Par exemple, essayez de :</string>
    <string name="intent_button_timer">Lancer un timer de 5 sec</string>
    <string name="intent_button_photo">Prendre un photo</string>
    <string name="intent_button_contact">Voir ses contacts</string>
</resources>
