<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/toastitem"
        android:title="@string/toast_item"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/intentitem"
        android:title="@string/intent_item"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/recycleritem"
        android:title="@string/recycler_item"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/downloaditem"
        android:title="@string/download_item"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
