<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_actionbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp">

    </FrameLayout>

    <TextView
        android:id="@+id/textActionbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/text_actionbar1"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />

    <TextView
        android:id="@+id/textActionbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/text_actionbar2"
        android:layout_below="@+id/textActionbar1"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textActionbar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="italic"
        android:text="@string/text_actionbar3"
        android:layout_below="@+id/textActionbar2"
        android:layout_marginTop="55dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textchoix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="italic"
        android:text="@string/text_choix"
        android:layout_below="@+id/textActionbar3"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>