<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cecitexte1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cecitexte2"
        android:layout_centerHorizontal="true"
        android:text="@string/ceci_texte1"
        android:textColor="#000000"
        android:includeFontPadding="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/cecitexte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ceci_texte2"
        android:textColor="#000000"
        android:typeface="serif"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/contour_texte"
        android:layout_alignBottom="@id/cecitexte2"
        android:layout_alignTop="@+id/cecitexte1"
        android:layout_alignLeft="@+id/cecitexte2"
        android:layout_alignRight="@+id/cecitexte2"
        android:layout_gravity="center">
    </FrameLayout>

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/timer_value"
        android:layout_below="@+id/cecitexte2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />




</RelativeLayout>